[gd_scene load_steps=19 format=2]

[ext_resource path="res://Attacks_Abilities/MeleeAttack/MeleeAttack.gd" type="Script" id=1]
[ext_resource path="res://art/Actions/MeleeAtkEffect/Melee_4.png" type="Texture" id=2]
[ext_resource path="res://art/Actions/MeleeAtkEffect/Melee_1.png" type="Texture" id=3]
[ext_resource path="res://art/Actions/MeleeAtkEffect/Melee_3.png" type="Texture" id=4]
[ext_resource path="res://art/Actions/MeleeAtkEffect/Melee_2.png" type="Texture" id=5]
[ext_resource path="res://art/Actions/MeleeAtkEffect/lifestealmelee.png" type="Texture" id=6]
[ext_resource path="res://art/Actions/MeleeAtkEffect/critmeleeupdated.png" type="Texture" id=7]
[ext_resource path="res://sounds/soundeffects/SLASHUUUU.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/soundeffects/THUNDA.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/soundeffects/Bite_of_87.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Melee",
"speed": 8.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "CritMelee"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("CritSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CritSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CritCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RegularCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LifestealCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "GreenMelee"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("GreenSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GreenSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RegularCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CritCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LifestealCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CritSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RedMelee"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("RedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LifestealCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.21, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RegularCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CritCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RedSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 13 ), Vector2( 100, 13 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 48.9998
height = 74.0004

[sub_resource type="CapsuleShape2D" id=9]
radius = 51.3943
height = 107.481

[sub_resource type="CapsuleShape2D" id=10]
radius = 71.0
height = 70.0

[node name="MeleeAttack" type="Area2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 64, 10.375 )
scale = Vector2( 3.66667, 2.58333 )
frames = SubResource( 2 )
animation = "Melee"
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="GreenSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 64, 10.375 )
scale = Vector2( 3.667, 2.583 )
texture = ExtResource( 2 )

[node name="RedSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 100, 13 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
hframes = 6
vframes = 5

[node name="CritSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 76, 7.49999 )
scale = Vector2( 2.914, 2 )
texture = ExtResource( 7 )
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CritMelee = SubResource( 7 )
anims/GreenMelee = SubResource( 3 )
anims/RESET = SubResource( 8 )
anims/RedMelee = SubResource( 6 )

[node name="RegularCollision" type="CollisionShape2D" parent="."]
position = Vector2( 83, 11 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[node name="CritCollision" type="CollisionShape2D" parent="."]
position = Vector2( 122, 3 )
rotation = 1.44339
shape = SubResource( 9 )
disabled = true

[node name="LifestealCollision" type="CollisionShape2D" parent="."]
position = Vector2( 81, 8 )
shape = SubResource( 10 )
disabled = true

[node name="greenhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 15.0

[node name="crithit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="lifestealhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="area_entered" from="." to="." method="_on_MeleeAttack_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
